--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vitejs/plugin-vue": "^5.2.1",
     "nuxt": "^3.15.4",
+    "sass": "^1.83.4",
     "vue": "latest",
     "vue-router": "latest"
   },
