--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.2.1",
+    "lucide-vue-next": "^0.474.0",
     "nuxt": "^3.15.4",
     "sass": "^1.83.4",
     "vue": "latest",
