--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/supabase": "^1.4.6",
+    "@supabase/gotrue-js": "^2.68.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "lucide-vue-next": "^0.474.0",
     "nuxt": "^3.15.4",
