--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/supabase": "^1.4.6",
     "@supabase/gotrue-js": "^2.68.0",
